{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 0,
  "lineage": "604ff7cb-0dbe-ac54-a302-fe5481dfa712",
  "resources": [
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:loadbalancer/app/ACS-ext-alb/73d91d8fdc78a3a1",
            "arn_suffix": "app/ACS-ext-alb/73d91d8fdc78a3a1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ACS-ext-alb-1060248764.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:loadbalancer/app/ACS-ext-alb/73d91d8fdc78a3a1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ACS-ext-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01b51108d7661da11"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00aad280af7071b86"
              },
              {
                "subnet_id": "subnet-02b96537809c5c37f"
              }
            ],
            "subnets": [
              "subnet-00aad280af7071b86",
              "subnet-02b96537809c5c37f"
            ],
            "tags": {
              "Name": "ACS-ext-alb"
            },
            "tags_all": {
              "Name": "ACS-ext-alb"
            },
            "vpc_id": "vpc-0433d9ea14969773e",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:loadbalancer/app/ialb/04fb09bc0961e257",
            "arn_suffix": "app/ialb/04fb09bc0961e257",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ialb-927720587.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:loadbalancer/app/ialb/04fb09bc0961e257",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-089463b67a24287bf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-025eb125bcec7e31e"
              },
              {
                "subnet_id": "subnet-0dae4420d165373d7"
              }
            ],
            "subnets": [
              "subnet-025eb125bcec7e31e",
              "subnet-0dae4420d165373d7"
            ],
            "tags": {
              "Name": "ACS-int-alb"
            },
            "tags_all": {
              "Name": "ACS-int-alb"
            },
            "vpc_id": "vpc-0433d9ea14969773e",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:listener/app/ACS-ext-alb/73d91d8fdc78a3a1/6e286116874f3eb9",
            "certificate_arn": "arn:aws:acm:us-west-2:839942615319:certificate/848c7ed0-e6c8-4345-ae38-cfa458d34b53",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/nginx-tgt/1b6b95dfbbced5be",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:listener/app/ACS-ext-alb/73d91d8fdc78a3a1/6e286116874f3eb9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:loadbalancer/app/ACS-ext-alb/73d91d8fdc78a3a1",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_acm_certificate.michaeloajala",
            "module.ALB.aws_acm_certificate_validation.michaeloajala",
            "module.ALB.aws_lb.ext-alb",
            "module.ALB.aws_lb_target_group.nginx-tgt",
            "module.ALB.aws_route53_record.michaeloajala",
            "module.ALB.data.aws_route53_zone.michaeloajala",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:listener/app/ialb/04fb09bc0961e257/c0388cd6e457d112",
            "certificate_arn": "arn:aws:acm:us-west-2:839942615319:certificate/848c7ed0-e6c8-4345-ae38-cfa458d34b53",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/wordpress-tgt/5a2e2bff30de0881",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:listener/app/ialb/04fb09bc0961e257/c0388cd6e457d112",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:loadbalancer/app/ialb/04fb09bc0961e257",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_acm_certificate.michaeloajala",
            "module.ALB.aws_acm_certificate_validation.michaeloajala",
            "module.ALB.aws_lb.ialb",
            "module.ALB.aws_lb_target_group.wordpress-tgt",
            "module.ALB.aws_route53_record.michaeloajala",
            "module.ALB.data.aws_route53_zone.michaeloajala",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/michael-tooling-tgt/5077f4d2b477e2d3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:listener-rule/app/ialb/04fb09bc0961e257/c0388cd6e457d112/c9bf8495f5d6ead1",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.michaeloajala.tk"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:listener-rule/app/ialb/04fb09bc0961e257/c0388cd6e457d112/c9bf8495f5d6ead1",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:listener/app/ialb/04fb09bc0961e257/c0388cd6e457d112",
            "priority": 99,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_acm_certificate.michaeloajala",
            "module.ALB.aws_acm_certificate_validation.michaeloajala",
            "module.ALB.aws_lb.ialb",
            "module.ALB.aws_lb_listener.web-listener",
            "module.ALB.aws_lb_target_group.tooling-tgt",
            "module.ALB.aws_lb_target_group.wordpress-tgt",
            "module.ALB.aws_route53_record.michaeloajala",
            "module.ALB.data.aws_route53_zone.michaeloajala",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/nginx-tgt/1b6b95dfbbced5be",
            "arn_suffix": "targetgroup/nginx-tgt/1b6b95dfbbced5be",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/nginx-tgt/1b6b95dfbbced5be",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/michael-tooling-tgt/5077f4d2b477e2d3",
            "arn_suffix": "targetgroup/michael-tooling-tgt/5077f4d2b477e2d3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/michael-tooling-tgt/5077f4d2b477e2d3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "michael-tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/wordpress-tgt/5a2e2bff30de0881",
            "arn_suffix": "targetgroup/wordpress-tgt/5a2e2bff30de0881",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/wordpress-tgt/5a2e2bff30de0881",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8aed687013e3f91",
            "association_id": "eipassoc-076922aebc891219a",
            "domain": "vpc",
            "id": "eipalloc-0a8aed687013e3f91",
            "network_border_group": "us-west-2",
            "network_interface": "eni-002e92245790215eb",
            "private_dns": "ip-10-0-2-198.us-west-2.compute.internal",
            "private_ip": "10.0.2.198",
            "public_dns": "ec2-44-227-52-128.us-west-2.compute.amazonaws.com",
            "public_ip": "44.227.52.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ACS-EIP-true"
            },
            "tags_all": {
              "Name": "ACS-EIP-true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:internet-gateway/igw-027fe116912562819",
            "id": "igw-027fe116912562819",
            "owner_id": "839942615319",
            "tags": {
              "Name": "ACS-vpc-0433d9ea14969773e-IG!"
            },
            "tags_all": {
              "Name": "ACS-vpc-0433d9ea14969773e-IG!"
            },
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8aed687013e3f91",
            "connectivity_type": "public",
            "id": "nat-0f07d584c7179108e",
            "network_interface_id": "eni-002e92245790215eb",
            "private_ip": "10.0.2.198",
            "public_ip": "44.227.52.128",
            "subnet_id": "subnet-00aad280af7071b86",
            "tags": {
              "Name": "ACS-Nat-true"
            },
            "tags_all": {
              "Name": "ACS-Nat-true"
            }
          },
          "dependencies": [
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fce78b790522ceb21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f07d584c7179108e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fce78b790522ceb2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_nat_gateway.nat",
            "module.VPC.aws_route_table.private-rtb"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-027fe116912562819",
            "id": "r-rtb-0702ef0b33c02973a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0702ef0b33c02973a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:route-table/rtb-0fce78b790522ceb2",
            "id": "rtb-0fce78b790522ceb2",
            "owner_id": "839942615319",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f07d584c7179108e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ACS-Private-Route-Table-true"
            },
            "tags_all": {
              "Name": "ACS-Private-Route-Table-true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:route-table/rtb-0702ef0b33c02973a",
            "id": "rtb-0702ef0b33c02973a",
            "owner_id": "839942615319",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027fe116912562819",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ACS-Public-Route-Table-true"
            },
            "tags_all": {
              "Name": "ACS-Public-Route-Table-true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0077f9588ef0a3e3d",
            "route_table_id": "rtb-0fce78b790522ceb2",
            "subnet_id": "subnet-025eb125bcec7e31e"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7d2e0878fcac353",
            "route_table_id": "rtb-0fce78b790522ceb2",
            "subnet_id": "subnet-0dae4420d165373d7"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0971f6a37bce98c8c",
            "route_table_id": "rtb-0fce78b790522ceb2",
            "subnet_id": "subnet-02026346361247b0a"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05094e333a79b1bf6",
            "route_table_id": "rtb-0fce78b790522ceb2",
            "subnet_id": "subnet-04cf889d5012153ae"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cb9344e6dda726a",
            "route_table_id": "rtb-0702ef0b33c02973a",
            "subnet_id": "subnet-00aad280af7071b86"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049c737938fedd3b8",
            "route_table_id": "rtb-0702ef0b33c02973a",
            "subnet_id": "subnet-02b96537809c5c37f"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:subnet/subnet-025eb125bcec7e31e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025eb125bcec7e31e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839942615319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-0"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-0"
            },
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:subnet/subnet-0dae4420d165373d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dae4420d165373d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839942615319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-1"
            },
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:subnet/subnet-02026346361247b0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02026346361247b0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839942615319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-2"
            },
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:subnet/subnet-04cf889d5012153ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cf889d5012153ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839942615319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-3"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-3"
            },
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:subnet/subnet-00aad280af7071b86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00aad280af7071b86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839942615319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PublicSubnet-0"
            },
            "tags_all": {
              "Name": "ACS-PublicSubnet-0"
            },
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:subnet/subnet-02b96537809c5c37f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b96537809c5c37f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839942615319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PublicSubnet-1"
            },
            "tags_all": {
              "Name": "ACS-PublicSubnet-1"
            },
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:vpc/vpc-0433d9ea14969773e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-060d4c91bf0ea410b",
            "default_route_table_id": "rtb-09956a3681e32e279",
            "default_security_group_id": "sg-018199807a1fc6943",
            "dhcp_options_id": "dopt-0b5192682c76c8a49",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": true,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0433d9ea14969773e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09956a3681e32e279",
            "owner_id": "839942615319",
            "tags": {
              "Name": "ACS-VPC"
            },
            "tags_all": {
              "Name": "ACS-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0530ca8899fac469f",
            "arn": "arn:aws:ec2:us-west-2:839942615319:instance/i-0f525bd2d7bccd045",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f525bd2d7bccd045",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0147df94501ecb2aa",
            "private_dns": "ip-10-0-2-33.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.33",
            "public_dns": "ec2-35-90-240-137.us-west-2.compute.amazonaws.com",
            "public_ip": "35.90.240.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d6c6310672336f8b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00aad280af7071b86",
            "tags": {
              "Name": "ACS-Jenkins"
            },
            "tags_all": {
              "Name": "ACS-Jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b51108d7661da11"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "artifactory",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0530ca8899fac469f",
            "arn": "arn:aws:ec2:us-west-2:839942615319:instance/i-0c88b777efd83ffd4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c88b777efd83ffd4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0faf1d2a669a5a187",
            "private_dns": "ip-10-0-2-219.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.219",
            "public_dns": "ec2-34-219-140-247.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.140.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ec828f2987f75ae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00aad280af7071b86",
            "tags": {
              "Name": "ACS-artifactory"
            },
            "tags_all": {
              "Name": "ACS-artifactory"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b51108d7661da11"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonbarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0530ca8899fac469f",
            "arn": "arn:aws:ec2:us-west-2:839942615319:instance/i-030eb7f7dd237ef89",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030eb7f7dd237ef89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08dba0e56c10dde06",
            "private_dns": "ip-10-0-2-132.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.132",
            "public_dns": "ec2-34-219-111-45.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.111.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0710301ebc385c67c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00aad280af7071b86",
            "tags": {
              "Name": "ACS-sonbarqube"
            },
            "tags_all": {
              "Name": "ACS-sonbarqube"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b51108d7661da11"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ACS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:security-group/sg-06fbc4e21b80f02b8",
            "description": "for bastion instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fbc4e21b80f02b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "839942615319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "datalayer-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:security-group/sg-09eae16832a6f8fee",
            "description": "data layer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09eae16832a6f8fee",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03ae69be60ca15e16"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03ae69be60ca15e16",
                  "sg-06fbc4e21b80f02b8"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "839942615319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "datalayer-sg"
            },
            "tags_all": {
              "Name": "datalayer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ext-alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:security-group/sg-01b51108d7661da11",
            "description": "for external loadbalncer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b51108d7661da11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "839942615319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ext-alb-sg"
            },
            "tags_all": {
              "Name": "ext-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "int-alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:security-group/sg-089463b67a24287bf",
            "description": "IALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089463b67a24287bf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e5a86779586b95d9"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "int-alb-sg",
            "name_prefix": "",
            "owner_id": "839942615319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "int-alb-sg"
            },
            "tags_all": {
              "Name": "int-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "nginx-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:security-group/sg-0e5a86779586b95d9",
            "description": "nginx instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5a86779586b95d9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06fbc4e21b80f02b8"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01b51108d7661da11"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "839942615319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-sg"
            },
            "tags_all": {
              "Name": "nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "webserver-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:security-group/sg-03ae69be60ca15e16",
            "description": "webservers security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ae69be60ca15e16",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06fbc4e21b80f02b8"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089463b67a24287bf"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "839942615319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-sg"
            },
            "tags_all": {
              "Name": "webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0433d9ea14969773e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-alb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-668713176",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01b51108d7661da11",
            "security_group_rule_id": "sgr-08277d1e9ad77214e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-alb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1957087374",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01b51108d7661da11",
            "security_group_rule_id": "sgr-0894fc2a37fbc4d71",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-2638342049",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e5a86779586b95d9",
            "security_group_rule_id": "sgr-09dc4f8d828cbaf99",
            "self": false,
            "source_security_group_id": "sg-06fbc4e21b80f02b8",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-3577077319",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-089463b67a24287bf",
            "security_group_rule_id": "sgr-0d935323aba86750d",
            "self": false,
            "source_security_group_id": "sg-0e5a86779586b95d9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-2994673611",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09eae16832a6f8fee",
            "security_group_rule_id": "sgr-01f2cdefbf532a7b7",
            "self": false,
            "source_security_group_id": "sg-06fbc4e21b80f02b8",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-2791430713",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09eae16832a6f8fee",
            "security_group_rule_id": "sgr-000aa84f9f8a0fcc0",
            "self": false,
            "source_security_group_id": "sg-03ae69be60ca15e16",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 2049,
            "id": "sgrule-900156083",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09eae16832a6f8fee",
            "security_group_rule_id": "sgr-07739af6531182106",
            "self": false,
            "source_security_group_id": "sg-03ae69be60ca15e16",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-1762998552",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e5a86779586b95d9",
            "security_group_rule_id": "sgr-00e2a17df0be5be1b",
            "self": false,
            "source_security_group_id": "sg-01b51108d7661da11",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ssh-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1827159134",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06fbc4e21b80f02b8",
            "security_group_rule_id": "sgr-0146cb9f9731a7986",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-1536685064",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03ae69be60ca15e16",
            "security_group_rule_id": "sgr-01f0fd742ac0ba10d",
            "self": false,
            "source_security_group_id": "sg-089463b67a24287bf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-770040136",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03ae69be60ca15e16",
            "security_group_rule_id": "sgr-0a6971d6551e6925d",
            "self": false,
            "source_security_group_id": "sg-06fbc4e21b80f02b8",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    }
  ]
}